--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "better-sqlite3": "^11.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
