--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "@google/genai": "^1.30.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "lucide-react": "^0.554.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "lucide-vue-next": "^0.460.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
     "better-sqlite3": "^11.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@vitejs/plugin-vue": "^5.2.1",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vue-tsc": "^2.1.30"
   }
 }
